Removed assetsAPI, is already possible in public + added website offline catch view + added more comments to .env_example

--- a/Marf-PHP/.env_example
+++ b/Marf-PHP/.env_example
@@ -1,17 +1,17 @@
-#Security
+#  -->Security<--
 
-#Name of algorithm used (str)
+#Name of algorithm used (str) [For example: "sha256"]
 SECURITY_HASH_ALGO = ""
 
 #AES key (str | max 32 chars)
 SECURITY_AES_KEY = ""
 
-#AES algorithm (str)
+#AES algorithm (str) [For example: "aes-256-cbc"]
 SECURITY_AES_ALGO = ""
 
 #
 
-#Database
+#  -->Database<--
 
 #Name of database used (str)
 DATABASE_NAME = ""
@@ -30,5 +30,12 @@ DATABASE_USER_PASSWORD = ""
 
 #If the database is enabled (str | "true" or "false")
 DATABASE_ENABLED = ""
+
+#
+
+#  -->General<--
+
+#If website is online or offline. (str | "true" or "false")
+GENERAL_WEBSITE_IS_ONLINE = ""
 
 #
