Added more comments to .env_example

--- a/Marf-PHP/.env_example
+++ b/Marf-PHP/.env_example
@@ -13,16 +13,16 @@ SECURITY_AES_ALGO = ""
 
 #  -->Database<--
 
-#Name of database used (str)
+#Name of database used (str) [For example: "website"]
 DATABASE_NAME = ""
 
-#IP or domain name pointing to the database. (str)
+#IP or domain name pointing to the database. (str) [For example: "localhost"]
 DATABASE_HOST = ""
 
-#Port used to connect with the database. (str)
+#Port used to connect with the database. (str) [For example: "3306" | This is the default port]
 DATABASE_PORT = ""
 
-#Username of database user (str)
+#Username of database user (str) [For example: "root"]
 DATABASE_USER_NAME = ""
 
 #Password for database user (str)
