Added $_SESSION identifier refresher to security entity

--- a/Marf-PHP/.env_example
+++ b/Marf-PHP/.env_example
@@ -9,6 +9,10 @@ SECURITY_AES_KEY = ""
 #AES algorithm (str) [For example: "aes-256-cbc"]
 SECURITY_AES_ALGO = ""
 
+#The time it takes in minutes to refresh the session identifier for $_SESSION cookie (str)
+# [For example: "15", this is 15 minutes]
+SECURITY_SESSION_REFRESH_TIME = ""
+
 #
 
 #  -->Database<--
