Changed location of PHPSESID length (now in .env)

--- a/Marf-PHP/.env_example
+++ b/Marf-PHP/.env_example
@@ -13,6 +13,9 @@ SECURITY_AES_ALGO = ""
 # [For example: "15", this is 15 minutes]
 SECURITY_SESSION_REFRESH_TIME = ""
 
+#Length of $_SESSION identifier token (str) [For example: "128"]
+SECURITY_PHPSESID_LENGTH = ""
+
 #
 
 #  -->Database<--
